@@ -10,6 +10,72 @@
 #include <QPainter>
 #include <QMouseEvent>
 #include <QResizeEvent>
+#include <QStaticText>
+
+/*!
+ * The text on the colored box
+ */
+class ColoredBoxGraphicsText : public QGraphicsObject
+{
+    Q_OBJECT
+public:
+    ColoredBoxGraphicsText(void):
+        _size(12)
+    {
+        QTextOption to;
+        to.setWrapMode(QTextOption::WrapAtWordBoundaryOrAnywhere);
+        _st.setTextOption(to);
+    }
+
+    QRectF boundingRect(void) const
+    {
+        return QRectF(QPointF(), _st.size());
+    }
+
+    void paint(QPainter *painter, const QStyleOptionGraphicsItem *, QWidget *)
+    {
+        const auto w = this->scene()->width();
+        const auto h = this->scene()->height();
+        _st.setTextWidth(w);
+        const auto size = _st.size();
+        painter->drawStaticText(QPointF(
+            (w-size.width())/2,
+            (h-size.height())/2), _st);
+    }
+
+public slots:
+    void setText(const QString &text)
+    {
+        _text = text;
+        this->updateStaticText();
+    }
+
+    void setFontSize(const int &size)
+    {
+        _size = size;
+        this->updateStaticText();
+    }
+
+    void setColor(const QColor &color)
+    {
+        _color = color;
+        this->updateStaticText();
+    }
+
+private:
+    void updateStaticText(void)
+    {
+        _st.setText(QString("<span style='color:%1;font-size:%2pt;'>%3</span>")
+            .arg((_color.lightnessF() > 0.5)?"black":"white")
+            .arg(_size)
+            .arg(_text.toHtmlEscaped()));
+    }
+
+    QString _text;
+    int _size;
+    QColor _color;
+    QStaticText _st;
+};
 
 /*!
  * Custom graphics view to handle resizing.
@@ -46,6 +112,16 @@ protected:
  * |default "My Status"
  * |widget StringEntry()
  *
+ * |param fontSize[Font Size] The font size for the digits in the widget.
+ * |default 12
+ * |widget SpinBox(minimum=8)
+ * |preview disable
+ *
+ * |param text The text to embed within the colored rectangle.
+ * |default ""
+ * |widget StringEntry()
+ * |preview valid
+ *
  * |param color The fill color of the status box in this widget.
  * |widget ColorPicker(mode=pastel)
  * |default "#77dd77"
@@ -54,6 +130,8 @@ protected:
  * |mode graphWidget
  * |factory /widgets/colored_box()
  * |setter setTitle(title)
+ * |setter setFontSize(fontSize)
+ * |setter setText(text)
  * |setter setColor(color)
  **********************************************************************/
 class ColoredBox : public QGroupBox, public Pothos::Block
@@ -68,11 +146,16 @@ public:
 
     ColoredBox(void):
         _view(new ColoredBoxGraphicsView(this)),
+        _text(new ColoredBoxGraphicsText()),
         _layout(new QHBoxLayout(this))
     {
+        _view->scene()->addItem(_text);
+
         this->setStyleSheet("QGroupBox {font-weight: bold;}");
         this->registerCall(this, POTHOS_FCN_TUPLE(ColoredBox, widget));
         this->registerCall(this, POTHOS_FCN_TUPLE(ColoredBox, setTitle));
+        this->registerCall(this, POTHOS_FCN_TUPLE(ColoredBox, setFontSize));
+        this->registerCall(this, POTHOS_FCN_TUPLE(ColoredBox, setText));
         this->registerCall(this, POTHOS_FCN_TUPLE(ColoredBox, setColor));
 
         _layout->addWidget(_view);
@@ -90,9 +173,23 @@ public:
         QMetaObject::invokeMethod(this, "handleSetTitle", Qt::QueuedConnection, Q_ARG(QString, title));
     }
 
+    void setFontSize(const int size)
+    {
+        QMetaObject::invokeMethod(_text, "setFontSize", Qt::QueuedConnection, Q_ARG(int, size));
+        QMetaObject::invokeMethod(_view, "repaint", Qt::QueuedConnection);
+    }
+
+    void setText(const QString &text)
+    {
+        QMetaObject::invokeMethod(_text, "setText", Qt::QueuedConnection, Q_ARG(QString, text));
+        QMetaObject::invokeMethod(_view, "repaint", Qt::QueuedConnection);
+    }
+
     void setColor(const QString &color)
     {
         QMetaObject::invokeMethod(this, "handleSetColor", Qt::QueuedConnection, Q_ARG(QColor, QColor(color)));
+        QMetaObject::invokeMethod(_text, "setColor", Qt::QueuedConnection, Q_ARG(QColor, QColor(color)));
+        QMetaObject::invokeMethod(_view, "repaint", Qt::QueuedConnection);
     }
 
 private slots:
@@ -116,6 +213,7 @@ protected:
     }
 
     ColoredBoxGraphicsView *_view;
+    ColoredBoxGraphicsText *_text;
     QHBoxLayout *_layout;
 };
 
