@@ -3,6 +3,7 @@ This this the changelog file for the Pothos Widgets toolkit.
 Release 0.4.2 (pending)
 ==========================
 
+- Added optional text for the colored box contents
 - Added direction option for radio group layout
 
 Release 0.4.2 (2017-04-23)
